# fast-soy-admin

./: .dockerignore  .env  .env.docker  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.en.md  README.md  cron_reset.py  docker-compose.yml  llms-full.md  llms.txt  pyproject.toml  requirements.txt  run.py
admin-backend/: .dockerignore  .env.docker  .gitignore  CLAUDE.md  README.md  docker-compose.yml
admin-backend/app/controllers/: user.py
admin-backend/app/core/: code.py  exceptions.py  middlewares.py
admin-backend/app/settings/: config.py
admin-backend/deploy/: web.Dockerfile  web.conf
admin-frontend/: .env.prod  README.md
admin-frontend/src/plugins/: loading.ts
admin-frontend/src/typings/: app.d.ts
app/: __init__.py
app/api/: __init__.py  health.py
app/api/v1/: utils.py
app/api/v1/auth/: auth.py
app/business/: __init__.py
app/business/api/: _example.py
app/business/hr/: config.py  controllers.py  ctx.py  dependency.py  init_data.py  models.py  schemas.py  services.py
app/business/models/: _example.py
app/controllers/: api.py  log.py  menu.py  role.py  user.py
app/core/: autodiscover.py  base_model.py  base_schema.py  cache.py  code.py  config.py  crud.py  ctx.py  dependency.py  exceptions.py  init_app.py  log.py  middlewares.py  redis.py  router.py  tools.py
app/log/: __init__.py  log.py
app/models/system/: __init__.py  admin.py  utils.py
app/monitor/: __init__.py  api.py  server_info.py
app/radar/: __init__.py  api.py  config.py  ctx.py  db.py  developer.py  exceptions.py  middleware.py  models.py  query_capture.py
app/schemas/: admin.py  base.py  login.py  roles.py  users.py
app/services/: captcha.py
app/settings/: config.py
app/system/: init_data.py  security.py
app/system/api/: __init__.py  apis.py  auth.py  menus.py  monitor.py  roles.py  route.py  users.py  utils.py
app/system/controllers/: __init__.py  api.py  menu.py  role.py  user.py
app/system/models/: __init__.py  admin.py
app/system/radar/: __init__.py  api.py  config.py  db.py  developer.py  exceptions.py  middleware.py  models.py  query_capture.py
app/system/schemas/: admin.py  login.py  users.py
app/system/services/: __init__.py  auth.py  captcha.py  init_helper.py  monitor.py  user.py
app/utils/: __init__.py  init_helper.py  security.py  user.py
deploy/: app.Dockerfile
tests/: conftest.py  create_role.py  create_user.py  helpers.py  test_auth.py  test_hr.py  test_menus.py  test_radar_api.py  test_radar_db.py  test_radar_models.py  test_roles.py  test_users.py
web/: .env  .env.test  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
web/src/constants/: business.ts
web/src/theme/: settings.ts
web/src/typings/: app.d.ts  components.d.ts  elegant-router.d.ts  storage.d.ts
(+110 files in other folders)
