[project]
name = "fast-soy-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "tortoise-orm[aiosqlite]>=0.20.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "passlib>=1.7.4",
    "pyjwt>=2.8.0",
    "loguru>=0.7.2",
    "aerich>=0.7.2",
    "email-validator>=2.1.1",
    "setuptools>=69.5.1",
    "argon2-cffi>=23.1.0",
    "fastapi-cache2>=0.2.2",
    "redis>=4.6.0",
    "orjson>=3.10.12",
    "jinja2>=3.1.0",
]

[tool.aerich]
tortoise_orm = "app.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pyright]
include = ["app"]
exclude = [
    "web",
    ".venv",
    "**/.*",
    "**/__pycache__",
    "**/node_modules",
    "src/experimental",
    "src/typestubs",
]
pythonVersion = "3.12"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
executionEnvironments = [
  { root = "./tests/python_3_12", pythonVersion = "3.12", extraPaths = [
    "./",
  ] },
  { root = "./tests", extraPaths = [
    "./",
  ] },
  { root = "./" },
]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true
